@@ -1414,20 +1414,25 @@ void formula_ai::play_turn()
 				handle_exception( e, "Unit formula error for unit: '" + i->second.type_id() + "' standing at (" + boost::lexical_cast<std::string>(i->first.x+1) + "," + boost::lexical_cast<std::string>(i->first.y+1) + ")");
 			}
 
-			if( i->second.has_loop_formula() )
-			{
-				try {
-					game_logic::const_formula_ptr loop_formula(new game_logic::formula(i->second.get_loop_formula(), &function_table));
-					game_logic::map_formula_callable callable(this);
-					callable.add_ref();
-					callable.add("me", variant(new unit_callable(*i)));
-					while ( make_move(loop_formula, callable) ) {}
+			if( i.valid() ) {
+				if( i->second.has_loop_formula() )
+				{
+					try {
+						game_logic::const_formula_ptr loop_formula(new game_logic::formula(i->second.get_loop_formula(), &function_table));
+						game_logic::map_formula_callable callable(this);
+						callable.add_ref();
+						callable.add("me", variant(new unit_callable(*i)));
+						while ( make_move(loop_formula, callable) ) {}
+					}
+					catch(formula_error& e) {
+						if(e.filename == "formula")
+							e.line = 0;
+						handle_exception( e, "Unit loop formula error for unit: '" + i->second.type_id() + "' standing at (" + boost::lexical_cast<std::string>(i->first.x+1) + "," + boost::lexical_cast<std::string>(i->first.y+1) + ")");
+					}
 				}
-				catch(formula_error& e) {
-					if(e.filename == "formula")
-						e.line = 0;
-					handle_exception( e, "Unit loop formula error for unit: '" + i->second.type_id() + "' standing at (" + boost::lexical_cast<std::string>(i->first.x+1) + "," + boost::lexical_cast<std::string>(i->first.y+1) + ")");
-				}
+			}
+			else {
+				ERR_AI << "FIXME: unit iterator invalidated after make_move()!\n";
 			}
 		}
 	}
